--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -29,4 +29,14 @@ layout: default
       </div>
     </div>
   </div>
+
+  <script>
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push({
+'event': 'add_to_cart',
+'product_name': '$product_name',
+'product_id': '$product_id',
+'product_price': $product_price,
+});
+</script>
 </div>
