--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -33,7 +33,7 @@ layout: default
 <script>
 window.dataLayer = window.dataLayer || [];
 window.dataLayer.push({
-'event': 'toy_story_product',
+'event': 'product_page_viewed',
 'product_name': '{{ page.name }}',
 'product_id': '{{ page.identifier }}',
 'product_price': {{ page.price }},
